--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "dist-exiftool": "^10.53.0",
+    "gray-matter": "^4.0.3",
     "jszip": "^3.10.1",
     "next": "16.0.10",
     "node-exiftool": "^2.3.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
